# MobilityCapstoneDesign2026

./: .gitignore  CLAUDE.md  README.md
destination_selector/: CMakeLists.txt  package.xml
destination_selector/config/: destinations.yaml
destination_selector/launch/: destination_selector.launch  voxel_map_publisher.launch
destination_selector/rviz/: destination_selector.rviz
destination_selector/scripts/: destination_selector_node.py  voxel_map_publisher.py
hloc_localization/: CMakeLists.txt  package.xml
hloc_localization/launch/: hloc_localization.launch  hloc_on_map_bag_demo.launch  hloc_reference_pointcloud.launch
hloc_localization/rviz/: hloc_occupancy_edit.rviz  hloc_occupancy_only.rviz  hloc_on_map_bag_demo.rviz  hloc_pointcloud_occupancy.rviz  hloc_reference_pointcloud.rviz
hloc_localization/scripts/: hloc_localization_node.py  hloc_persistent_localization_node.py  hloc_pose_marker_node.py  hloc_reference_pointcloud_publisher.py
mobility_camera_bringup/: CMakeLists.txt  package.xml
mobility_camera_bringup/config/: arducam_camera_info.yaml  arducam_camera_info_1920x1200_legacy.yaml
mobility_camera_bringup/launch/: arducam_imx219.launch  arducam_imx219_capture.launch  arducam_imx219_preview.launch  arducam_imx219_space_capture.launch
mobility_camera_bringup/scripts/: arducam_camera_config.py  arducam_capture_controller.py  arducam_space_capture_controller.py
occupancy_path_planner/: CMakeLists.txt  package.xml
occupancy_path_planner/launch/: live_ar_navigation.launch  navigation_stack.launch  occupancy_path_planner.launch  path_image_overlay.launch  path_live_image_overlay.launch
occupancy_path_planner/scripts/: occupancy_path_planner_node.py  path_image_overlay.py  path_live_image_overlay.py  unity_path_processor_node.py
tools/: capture_to_colmap.py  hloc_pointcloud_editor.py
tools/orin/: PHONE_FULLSTACK_SPEC.md  README.md  export_onnx_models.py  setup_power_mode.sh
