<?xml version="1.0"?>
<package format="2">
  <name>hloc_localization</name>
  <version>0.0.1</version>
  <description>Runtime visual localization against a prebuilt HLoc reference map.</description>

  <maintainer email="vic@example.com">vic</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
