<?xml version="1.0"?>
<package format="2">
  <name>occupancy_path_planner</name>
  <version>0.0.1</version>
  <description>Grid-based path planner over a ROS OccupancyGrid.</description>

  <maintainer email="vic@example.com">vic</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>destination_selector</exec_depend>
  <exec_depend>hloc_localization</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
</package>
